--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,10 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @themepack 'powerline/block/orange'
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
