Support mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ set -g @themepack 'powerline/block/orange'
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
+setw -g mouse on
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
