--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g @themepack 'powerline/block/orange'
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
-setw -g mouse on
+#setw -g mouse on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
