less but better

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,53 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'laktak/extrakto'
-set -g @plugin 'jimeh/tmux-themepack'
+# set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'laktak/extrakto'
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'powerline/block/orange'
 
-set -g @themepack 'powerline/block/orange'
+# delay on perfix removes junk character on attaching
+set -sg escape-time 20
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+## Windows style
+set-option -g status-style "fg=#7E46B6,bg=default"
+set-window-option -g pane-active-border-style ''
 
-#setw -g mouse on
+## A bit more space in right status bar
+set -g status-right-length 50
+
+## Rename windows to fit current application
+setw -g automatic-rename on
+
+# Use zsh regardless of default settings
+if-shell 'test -x /usr/bin/zsh' 'set-option -g default-shell /usr/bin/zsh'
+
+## Plugin configuration
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @yank_selection 'primary'
+
+## Mouse On by default
+set -g mouse on
+
+# PageUp/PageDown works for scrolling
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+bind-key -T copy-mode-vi PPage send-keys -X page-up
+bind-key -T copy-mode-vi NPage send-keys -X page-down
+
+# Same for the mouse scroll button
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
